--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,13 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Combo&display=swap');
+* {
     padding: 0;
     margin: 0;
+    font-family: 'Combo', cursive;
+    font-weight: bold;
+    font-size: 32px;
 }
-.body{
+
+.body {
     background-image: url('../img/bg.jpg');
     min-height: 100vh;
     background-size: 100vw 105vh;
@@ -11,45 +16,109 @@
     justify-content: center;
     align-items: center;
 }
-#board{
-    background:linear-gradient(rgb(201, 255, 201),rgb(168, 255, 204));
+
+#board {
+    background: linear-gradient(rgb(201, 255, 201), rgb(168, 255, 204));
     width: 90vmin;
     height: 92vmin;
     border: solid black 2px;
-    display:grid;
+    display: grid;
     grid-template-rows: repeat(18, 1fr);
     grid-template-columns: repeat(18, 1fr);
 }
 
-#scoreBox{
+#scoreBox {
     position: absolute;
-    top: 3px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 18px;
-    right: 66%;
+    left: 10%;
+    top: 30%;
 }
-#hiscoreBox{
+
+#hiscoreBox {
     position: absolute;
-    top: 3px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 18px;
-    right: 30%;
+    left: 9%;
+    top: 38%;
 }
-.head{
+
+.head {
     background: linear-gradient(rgb(240, 124, 124), rgb(228, 228, 129));
-    border: 2px solid rgb(34, 4, 34); 
+    border: 2px solid rgb(34, 4, 34);
     transform: scale(1.02);
     border-radius: 9px;
 }
 
-.snake{
+.snake {
     background-color: purple;
     border: .25vmin solid white;
     border-radius: 12px;
 }
 
-.food{
+.food {
     background: linear-gradient(red, purple);
     border: .25vmin solid black;
     border-radius: 8px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #39ec51;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #39ec51;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.box{
+    position: absolute;
+    left: 16.5%;
+}
+p{
+    position: absolute;
+    font-size: larger;
+    /* bottom: 1px; */
+    left:8.5%;
+
 }
